# FreeCell

./: .editorconfig  .gitignore  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: audio.ts  game.ts  main.ts  style.css
crates/freecell_engine/: Cargo.toml
crates/freecell_engine/benches/: engine_bench.rs
crates/freecell_engine/proptest-regressions/: lib.txt
crates/freecell_engine/src/: action.rs  card.rs  deal.rs  env.rs  error.rs  game.rs  lib.rs  snapshot.rs  state.rs
crates/freecell_py/: Cargo.toml
crates/freecell_py/src/: lib.rs
crates/freecell_wasm/: Cargo.toml  LICENSE
crates/freecell_wasm/src/: lib.rs
docs/: ai.md  architecture.md  engine.md  initial-delivery-report.md  research-audit.md  roadmap.md  testing.md  web.md
tests/e2e/: package.json  playwright.config.ts
tests/e2e/specs/: app.spec.ts
tests/engine/: conftest.py  test_freecell_py.py
tools/audits/: reference-summary.md
tools/benchmarks/: README.md
tools/scripts/: run-cargo.mjs  run-wasm-pack.mjs
