[package]
name = "freecell_engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic FreeCell engine with replay, undo/redo, serialization, and AI-facing APIs"

[dependencies]
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5"
insta.workspace = true
proptest.workspace = true

[[bench]]
name = "engine_bench"
harness = false
