[package]
name = "freecell_py"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python binding for the FreeCell Rust engine"

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "freecell_py"

[dependencies]
freecell_engine = { path = "../freecell_engine" }
pyo3.workspace = true
pythonize.workspace = true
