[package]
name = "freecell_wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly binding for the FreeCell Rust engine"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
freecell_engine = { path = "../freecell_engine" }
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
